@@ -19,7 +19,18 @@ public class PurgeTeama extends SubCommand {
 			return new CommandResponse("admin.purge.confirm");
 		}
 
-		if (Team.getTeamManager().purgeTeams())
+		boolean money = true; 
+		boolean score = true;
+		
+		if(args.length >= 1) {
+			if(args[0].equals("money")) {
+				score = false;
+			} else if (args[0].equals("score")) {
+				money = false;
+			}
+		}
+		
+		if (Team.getTeamManager().purgeTeams(money, score))
 			return new CommandResponse(true, "admin.purge.success");
 
 		return new CommandResponse(false);
@@ -37,12 +48,12 @@ public class PurgeTeama extends SubCommand {
 
 	@Override
 	public String getHelp() {
-		return "Reset the score for all teams";
+		return "Reset the score and money for all teams, if you specify an value (i.e. money) only that will be reset";
 	}
 
 	@Override
 	public String getArguments() {
-		return "";
+		return "[score/money]";
 	}
 
 	@Override
@@ -52,11 +63,15 @@ public class PurgeTeama extends SubCommand {
 
 	@Override
 	public int getMaximumArguments() {
-		return 0;
+		return 1;
 	}
 
 	@Override
 	public void onTabComplete(List<String> options, CommandSender sender, String label, String[] args) {
+		if (args.length == 1) {
+			options.add("score");
+			options.add("money");
+		}
 	}
 
 }
